python-graph
A library for working with graphs in Python
--------------------------------------------------------------------------------

CHANGELOG


Release 1.6.2	[??? ??, 2009]

Important API Changes:
	Adding an already added node to a graph or digraph now raises an exception (AdditionError).
	pygraph.classes.Classname.classname classes were renamed to pygraph.classes.classname.classname.
	pygraph.algorithms.filters.Filtername.filtername filters were renamed to pygraph.algorithms.filters.filtername.filtername.
	pygraph.algorithms.heuristics.Heuristicname.heuristicname heuristics were renamed to pygraph.algorithms.heuristics.heuristicname.heuristicname.
	hypergraph's read() and write() methods were removed. 


Release 1.6.1	[Jul 04, 2009]

Enhancements:
	Added reverse method to the digraph class.

Important API Changes:
	Removed methods calling algorithms from graph and digraph classes;
	pygraph.algorithms.cycles.find_cycle does not take argument directed anymore;
	Removed methods read, write and generate from graph and digraph classes;
	Functions for writing and reading graphs now in pygraph.readwrite.
	

Release 1.6.0	[Jun 06, 2009]

Important API Changes:
	Module name was renamed to pygraph;
	python_graph_exception was renamed to GraphError;
	Exception unreachable was renamed to NodeUnreachable;
	get_edge_weight was renamed to edge_weight;
	get_edge_label was renamed to edge_label;
	get_edge_attributes was renamed to edge_attributes;
	get_node_attributes was renamed to node_attributes;
	degree was renamed to node_degree;
	order was renamed to node_order.


Release 1.5.0	[May 03, 2009]

Enhancements:
	Assymptotically faster Mutual Accessibility (now using Tarjan's algorithm);
	DOT-Language importing;
	Transitive edge detection;
	Critical path algorithm.

Fixes:
	Cycle detection algorithm was reporting wrong results on some digraphs;
	Removed Minimal Spanning Tree from Digraphs as Prim's algorithm does not work on them (Issue 28).