@@ -39,8 +39,8 @@ class hypergraph (object):
     Hypergraphs are a generalization of graphs where an edge (called hyperedge) can connect more
     than two nodes.
     
-    @sort: __init__, __len__, __str__, add_hyperedge, add_hyperedges, add_node,    add_nodes, has_node,
-    hyperedges, link, links, nodes, unlink, read, write, accessibility,    connected_components,
+    @sort: __init__, __len__, __str__, add_hyperedge, add_hyperedges, add_node, add_nodes,
+    has_node, hyperedges, link, links, nodes, unlink, accessibility, connected_components,
     cut_hyperedges, cut_nodes
     """
 
